# Hospital-Management-System

./: CMakeLists.txt  main.cpp
includes/: Hospital.hpp
includes/lib/: Address.hpp  Date.hpp  Email.hpp  Identification.hpp  MedicalHistory.hpp  Role.hpp  Sex.hpp  Telephone.hpp
includes/lib/prettyText/: TextColor.hpp
includes/lib/utils/: Roles.hpp  Utils.hpp
includes/licensure/staff/: MedicalLicensure.hpp  NursingLicensure.hpp  PharmacyLicensure.hpp  TherapistLicensure.hpp
includes/people/: Person.hpp
includes/people/patients/: Patient.hpp
includes/people/staff/: Nursing.hpp  Pharmacy.hpp  Physician.hpp  Technitian.hpp  Therapist.hpp
includes/schedule/: Schedule.h
lib/: CMakeLists.txt  Contact.cpp  Date.cpp  Insurance.cpp  Role.cpp  Sex.cpp  Telephone.cpp
lib/prettyText/: TextColor.cpp
lib/utils/: Roles.cpp  Utils.cpp
src/: CMakeLists.txt
tests/: CMakeLists.txt  catch2.hpp  tests.cpp
